logdata-anomaly-miner (0.0.9~pre0) xenial; urgency=low

  Bugfixes:
  * AnalysisChild: handle remote control client connection errors correctly

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Fri, 23 Jun 2017 17:00:00 +0000

logdata-anomaly-miner (0.0.8) xenial; urgency=low

  New features:
  * Base64StringModelElement for parsing of base64 strings
  * DecimalFloatValueModelElement for parsing of floats
  * AnalysisChild full asynchronous remote control connection
    handling
  * MissingMatchPathValueDetector realerting support added
  * StringRegexMatchRule for matching parsed data using regex
  * EnhancedNewMatchPathValueComboDetector added for more complex
    value combination detection providing transformation, annotation,
    features ...
  Changes:
  * Various bugfixes
  * Code cleanup using pylint

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Tue, 30 May 2017 17:00:00 +0000

logdata-anomaly-miner (0.0.7) xenial; urgency=low

  New features:
  * Datetime parsing reimplemented in DateTimeModelElement to
    fix various shortcomings of strptime in Python and libc.
  * ElementValueBranchModelElement added to support conditional
    branching.
  * DebugHistoryMatchRule added: keep history of matched LogAtoms.
  * Unix socket input support: improved logdata reading now also
    supporting connects to UNIX server sockets for reading.
  Changes:
  * Restructured AMinerUtils and utils package.

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon,  9 Jan 2017 18:00:00 +0000

logdata-anomaly-miner (0.0.6) xenial; urgency=low

  New features:
  * Added "LogAtom" and "AtomHandlerInterface" to pass data from
    IO-layer to upper layers consistently.
  * Added TimestampsUnsortedDetector.py to fail (exit) when data
    is not properly sorted.
  * Added SimpleMultisourceAtomSync.py to merge LogAtoms read
    from parallel streams, e.g. from multiple logfiles.

  Bugfixes:
  * Logic flaw in logfile rollover handling, selecting on bad fd.